tests/good/lexical/025-commentaire-imbriquer-4.clap
val x : (* type de retourn int  **commantaire imbrique  *)  int = 42
