tests/bad/typing/019-fun-bad-arg-type.clap
val x = (fun (i : int) => i) "42"
